Fixed colour not showing for diet card

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -55,9 +55,20 @@
     background-color: #EF476F;
 }
 
+#card-header4{
+    background-color: #5f9dd3; 
+    font-weight: bold;
+}
+
+#card-body4{
+    background-color: #3e8bce;
+}
+
 .card-body-img{
     object-fit: cover; 
     max-width: 100%; 
     border-radius: 30px;
 }
+
+
 
